--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^4.3.0",
     "@stripe/react-stripe-js": "^3.7.0",
-    "@stripe/stripe-js": "^7.5.0",
+    "@stripe/stripe-js": "^7.8.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,6 +33,7 @@
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-pdf": "^10.0.1",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
   },
