--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.8.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
