--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "docx": "^8.0.2",
     "framer-motion": "^12.23.6",
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.525.0",
