--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stripe/stripe-js": "^7.8.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.10.0",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docx": "^8.0.2",
